--- a/style/app.scss
+++ b/style/app.scss
@@ -1,5 +1,8 @@
+// @import './global.scss';
+
 $gray-primary: rgb(94, 101, 105);
 $gray-second: rgba($gray-primary, 60%);
+$gray-checked: rgb(123, 141, 151);
 $gray-01: rgb(63, 67, 69);
 $gray-02: rgb(59, 63, 65);
 $gray-03: rgb(23, 25, 26);
@@ -7,19 +10,13 @@ $gray-03: rgb(23, 25, 26);
 $yellow-primary: rgb(199, 156, 15);
 $yellow-second: rgb(168, 131, 7);
 
+$blue-primary: rgb(15, 145, 224);
+
 $white-01: rgb(232, 230, 227);
 
-@mixin flex-center {
+@mixin flex-center($direction: column) {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-}
-
-@mixin scroll-without-bar {
-	overflow: scroll;
-	scrollbar-width: none; /* Firefox */
-	-ms-overflow-style: none; /* IE 10+ */
-	&::-webkit-scrollbar {
-		display: none; /* Chrome Safari */
-	}
+	flex-direction: $direction;
 }
