--- a/src/style.module.scss
+++ b/src/style.module.scss
@@ -2,12 +2,18 @@ body {
 	background: $gray-01;
 	color: $white-01;
 	margin: 0px;
+	font-family: sans-serif;
 }
 
 .app {
-	@include flex-center;
-	flex-direction: column;
-	align-items: flex-start;
+	@include flex-center(row);
 	width: 100%;
 	height: 100%;
+
+	.board {
+		width: 80%;
+		height: 100%;
+		overflow-y: scroll;
+		padding-left: 16%;
+	}
 }
