docs: Github Pages

--- a/src/components/slide-menu/slide-item.module.scss
+++ b/src/components/slide-menu/slide-item.module.scss
@@ -34,8 +34,10 @@ $side-width: 60px;
 		white-space: nowrap;
 
 		&-title {
-			font-size: 40px;
+			font-size: 40px !important;
 			margin: 6px 0px;
+			text-decoration: none;
+			color: $white-01;
 		}
 
 		&-item {
