feat chord pregression

--- a/src/components/guitar-board/board/guitar-board.module.scss
+++ b/src/components/guitar-board/board/guitar-board.module.scss
@@ -109,4 +109,8 @@
 	&.tapped-point {
 		background: $blue-primary !important;
 	}
+
+	&.emphasisoned-point {
+		background: $yellow-primary;
+	}
 }
