--- a/src/components/guitar-board/board/guitar-board.module.scss
+++ b/src/components/guitar-board/board/guitar-board.module.scss
@@ -112,7 +112,7 @@
 	}
 
 	&.tapped-point {
-		background: $blue-second !important;
+		background: $blue-primary !important;
 	}
 
 	&.emphasised-point {
