--- a/src/components/piano-board/piano-board.module.scss
+++ b/src/components/piano-board/piano-board.module.scss
@@ -33,7 +33,7 @@ $black-height: $button-size * 3;
 		}
 
 		&.checked {
-			background: $blue-second;
+			background: $blue-primary;
 		}
 	}
 
@@ -53,7 +53,7 @@ $black-height: $button-size * 3;
 		}
 
 		&.checked {
-			background: $blue-second;
+			background: $blue-primary;
 		}
 	}
 }
