--- a/src/components/guitar-board/board-controller/degree-controller/degree-controller.module.scss
+++ b/src/components/guitar-board/board-controller/degree-controller/degree-controller.module.scss
@@ -40,16 +40,63 @@
 }
 
 .degree-container {
+	// flex: 1;
+
 	.degree-view {
 		opacity: 0;
 		display: flex;
-		animation: show 0.15s forwards;
+		animation: show 0.5s forwards;
+
+		&:hover {
+			.degree-remove {
+				display: flex;
+				width: $button-size * 2;
+				margin: 2px;
+			}
+		}
+
 		.degree-item {
+			position: relative;
 			width: $button-size * 2;
 			height: $button-size * 2;
-			font-size: 20px;
-			@include flex-center;
-			// background: $yellow-primary;
+			font-size: 24px;
+			white-space: nowrap;
+			@include flex-center(row);
+
+			&:hover {
+				.degree-item-remove {
+					opacity: 0.8;
+				}
+			}
+
+			.degree-item-tag {
+				margin: 6px 0 0 3px;
+				font-size: 14px;
+				opacity: 0.8;
+			}
+
+			.degree-item-remove {
+				transition: all 0.15s ease-in-out;
+				opacity: 0;
+				position: absolute;
+				right: 4px;
+				top: 4px;
+			}
+		}
+
+		.degree-item-second {
+			height: $button-size;
+			&:hover {
+				@include touch-color;
+			}
+		}
+
+		.degree-remove {
+			width: 0px;
+			margin: 2px 0px;
+			&:hover {
+				@include touch-color($purple-primary, $purple-second);
+			}
 		}
 
 		@keyframes show {
@@ -60,12 +107,24 @@
 		}
 	}
 
+	.tags-view {
+		flex-wrap: wrap;
+
+		.tags-item {
+			width: $button-size * 2;
+			font-size: 14px;
+			opacity: 0.8;
+			@include flex-center;
+
+			&:hover {
+				@include touch-color;
+			}
+		}
+	}
+
 	.degree-view-checked {
 		.degree-item {
-			background: $yellow-primary;
-			&:hover {
-				background: $yellow-second;
-			}
+			@include touch-color;
 		}
 	}
 }
