--- a/src/components/slide-menu/slide-item.module.scss
+++ b/src/components/slide-menu/slide-item.module.scss
@@ -73,10 +73,11 @@ $side-width: 60px;
 		}
 
 		&-title {
-			font-size: 40px !important;
-			margin: 6px 0px;
+			font-size: 68px !important;
 			text-decoration: none;
 			color: $white-01;
+			line-height: 92px;
+			font-weight: 700;
 
 			@media (max-width: 540px) {
 				line-height: 100px;
@@ -88,10 +89,12 @@ $side-width: 60px;
 			font-size: 18px;
 			font-weight: 300;
 			padding: 8px;
-			cursor: pointer;
 			text-decoration: none;
-			display: block;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
 			transition: all 0.15s linear;
+			cursor: pointer;
 			&:hover {
 				font-weight: 400;
 				padding-left: 10px;
@@ -108,4 +111,11 @@ $side-width: 60px;
 		width: 0px;
 		height: 100%;
 	}
+}
+
+.seperate {
+	width: 100%;
+	height: 1px;
+	background: $white-01;
+	opacity: 0.2;
 }
