--- a/style/app.scss
+++ b/style/app.scss
@@ -2,7 +2,7 @@
 
 $gray-primary: rgb(94, 101, 105);
 $gray-second: rgba($gray-primary, 60%);
-$gray-checked: rgb(123, 141, 151);
+$gray-third: rgb(123, 141, 151);
 $gray-01: rgb(63, 67, 69);
 $gray-02: rgb(49, 53, 54);
 $gray-03: rgb(46, 49, 51);
@@ -11,11 +11,20 @@ $gray-07: rgb(23, 25, 26);
 $yellow-primary: rgb(199, 156, 15);
 $yellow-second: rgb(168, 131, 7);
 
-$blue-primary: rgb(15, 145, 224);
-$blue-second: rgb(62, 148, 202);
-$blue-third: rgb(47, 120, 165);
+$blue-primary: rgb(62, 148, 202);
+$blue-second: rgb(47, 120, 165);
+
+$green-primary: rgb(57, 167, 150);
+$green-second: rgb(48, 148, 133);
+
+$cyan-primary: rgb(168, 168, 18);
+$cyan-second: rgb(145, 145, 14);
+
+$purple-primary: rgb(209, 91, 47);
+$purple-second: rgb(189, 80, 41);
 
 $white-01: rgb(232, 230, 227);
+$white-02: rgba(202, 201, 199, 0.911);
 
 $button-size: 40;
 $button-margin: 2;
@@ -25,6 +34,13 @@ $button-margin: 2;
 	justify-content: center;
 	align-items: center;
 	flex-direction: $direction;
+}
+
+@mixin touch-color($color: $yellow-primary, $hover-color: $yellow-second) {
+	background: $color;
+	&:hover {
+		background: $hover-color;
+	}
 }
 
 :export {
