--- a/src/components/guitar-board/board-controller/chord-card/chord-card.module.scss
+++ b/src/components/guitar-board/board-controller/chord-card/chord-card.module.scss
@@ -1,55 +1,56 @@
-.chord-card {
-	width: $button-size * 5 !important;
-	height: $button-size * 5 !important;
-	position: relative;
-	@include flex-center();
+.container {
+	display: flex;
+	.chord-card {
+		width: $button-size * 5;
+		height: $button-size * 5;
+		position: relative;
+		@include flex-center(row);
 
-	&-dot {
-		width: 10px;
-		height: 10px;
-		border-radius: 10px;
-		background-color: white;
-		position: absolute;
-		right: 10px;
-		top: 10px;
-		opacity: 0.7;
-	}
-
-	&:hover {
-		.chord-card-icons {
-			opacity: 1;
+		&-dot {
+			width: 10px;
+			height: 10px;
+			border-radius: 10px;
+			background-color: white;
+			position: absolute;
+			right: 10px;
+			top: 10px;
+			opacity: 0.7;
 		}
-		// opacity: 0.8;
-		// background: $gray-primary !important;
-	}
 
-	.chord-card-icons {
-		opacity: 0;
-		position: absolute;
-		right: 8px;
-		bottom: 15px;
-		display: flex;
-		flex-direction: column;
+		&:hover {
+			.chord-card-icons {
+				opacity: 1;
+			}
+		}
 
-		.chord-card-sounds {
-			@include flex-center;
-			height: 20px;
-			width: 20px;
-			margin-top: 4px;
-			border-radius: 4px;
-			transition: all 0.15s linear;
-			background-color: #eee2;
-			&:hover {
-				transform: scale(1.2);
+		.chord-card-icons {
+			opacity: 0;
+			position: absolute;
+			right: 8px;
+			bottom: 15px;
+			display: flex;
+			flex-direction: column;
+
+			.chord-card-sounds {
+				@include flex-center;
+				height: 20px;
+				width: 20px;
+				margin-top: 4px;
+				border-radius: 4px;
+				transition: all 0.15s linear;
+				background-color: #eee2;
+				&:hover {
+					transform: scale(1.2);
+				}
 			}
 		}
 	}
-}
 
-.chord-card-hidden {
-	width: 0 !important;
-	height: 0 !important;
-	margin: 0 !important;
+	.chord-card-hidden {
+		width: 0 !important;
+		height: 0 !important;
+		margin: 0 !important;
+	}
 }
 
 .detail-card {
@@ -83,6 +84,21 @@
 
 		> div {
 			@include flex-center;
+		}
+	}
+}
+
+.collection-type {
+	.buttons {
+		display: flex;
+	}
+	.confirm {
+		// margin-bottom: $button-margin * 2 + px !important;
+		width: $button-size -$button-margin;
+		@include flex-center;
+
+		> svg {
+			opacity: 0.8;
 		}
 	}
 }
