--- a/src/style.module.scss
+++ b/src/style.module.scss
@@ -3,7 +3,14 @@ body {
 	color: $white-01;
 	margin: 0px;
 	font-family: 'Futura PT', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
+	-webkit-user-drag: none;
 }
 
 .app {
