--- a/src/components/guitar-board/board-controller/chord-controller/chord-controller.module.scss
+++ b/src/components/guitar-board/board-controller/chord-controller/chord-controller.module.scss
@@ -5,7 +5,7 @@
 
 .container {
 	display: flex;
-	@media (max-width: 540px) {
+	@media #{$mobileLayout} {
 		flex-direction: column;
 		width: calc(100vw - 20px);
 		.chord-controllers {
