--- a/src/components/guitar-board/board-controller/controller/controller.module.scss
+++ b/src/components/guitar-board/board-controller/controller/controller.module.scss
@@ -18,7 +18,7 @@ $controller-nums: 4;
 	flex-direction: row;
 	width: fit-content;
 
-	@media (max-width: 540px) {
+	@media #{$mobileLayout} {
 		&.board-controller__wrap {
 			flex-wrap: wrap;
 		}
