feat: 适配移动端参数

--- a/src/pages/chord-analyzer/chord-analyzer.module.scss
+++ b/src/pages/chord-analyzer/chord-analyzer.module.scss
@@ -1,5 +1,8 @@
 .taped-container {
 	display: flex;
+	@media #{$mobileLayout} {
+		flex-direction: column;
+	}
 	.svg-chord {
 		width: $button-size * 6 !important;
 		height: $button-size * 6 !important;
