feat: 新增指板图

--- a/src/components/guitar-board/board/guitar-board.module.scss
+++ b/src/components/guitar-board/board/guitar-board.module.scss
@@ -120,4 +120,8 @@
 	&.emphasised-point {
 		background: $green-primary !important;
 	}
+
+	&.high-fixed-point {
+		background: $green-second !important;
+	}
 }
