--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -25,6 +25,7 @@ $purple-second: rgb(189, 80, 41);
 
 $white-01: rgb(232, 230, 227);
 $white-02: rgba(202, 201, 199, 0.911);
+$white-03: rgba(178, 178, 178, 0.911);
 
 $button-size: 40;
 $button-margin: 2;
