--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -31,7 +31,7 @@
 }
 
 :global(.buitar-primary-range) {
-	-webkit-appearance: none;
+	appearance: none;
 	flex: 1;
 	width: $button-size * 6;
 	height: 4px;
