--- a/src/pages/guitar-tableture/guitar-tableture.module.scss
+++ b/src/pages/guitar-tableture/guitar-tableture.module.scss
@@ -29,30 +29,35 @@
 	.tableture-options-button {
 		@include flex-center();
 		font-size: 20px;
-		opacity: 0.6;
 	}
 
 	.tableture-options-button__active {
-        background: $green-primary;
+		background: $yellow-primary;
 		opacity: 1;
 	}
 }
 
 .tableture-list {
-	// display: flex;
-	// flex-wrap: wrap;
-    > div {
-        margin-top: $button-size * 0.2;
-		margin-right: $button-size * 0.2;
-	}
+	display: flex;
+    flex-direction: row;
+	flex-wrap: wrap;
+}
+.tableture-list__edit {
+    flex-direction: column;
 }
 
-.tableture-list-add {
+
+.tableture-list-item {
+	margin-bottom: $button-size * 0.2;
+	margin-right: $button-size * 0.2;
+}
+
+.tableture-list-button {
 	@include flex-center();
 	font-size: 20px;
-	opacity: 0.6;
 	width: $button-size * 1.5 !important;
 	height: $button-size * 1.5 !important;
+    margin-top: $button-size * 0.1px !important;
 }
 
 .guitar-size-slider {
