--- a/packages/buitar/src/components/basic/collection-selecter.module.scss
+++ b/packages/buitar/src/components/basic/collection-selecter.module.scss
@@ -5,8 +5,8 @@
 		border: none;
 		border-radius: 2px;
 		height: $button-size;
-		width: $button-size * 2;
-		margin: $button-margin;
+		width: $button-size * 2px;
+		margin: $button-margin + px;
 		padding: 4px 10px;
 		color: $white-01;
 		font-size: 16px;
