--- a/packages/buitar/src/components/guitar-board/board-controller/fifth-circle-controller/fifth-circle-controller.module.scss
+++ b/packages/buitar/src/components/guitar-board/board-controller/fifth-circle-controller/fifth-circle-controller.module.scss
@@ -1,5 +1,5 @@
 .fifth-circle {
-	min-width: $button-size * 7;
-	height: $button-size * 7 !important;
+	min-width: $button-size * 7px;
+	height: $button-size * 7px !important;
 	background: $gray-second !important;
 }
