--- a/packages/buitar/src/pages/chord-progressions/chord-progressions.module.scss
+++ b/packages/buitar/src/pages/chord-progressions/chord-progressions.module.scss
@@ -2,7 +2,7 @@
 	display: flex;
 
 	.card-view {
-		width: $button-size * 4 + px !important;
-		height: $button-size * 4 + px !important;
+		width: $button-size * 4px !important;
+		height: $button-size * 4px !important;
 	}
 }
