--- a/packages/buitar/src/components/basic/text-input.module.scss
+++ b/packages/buitar/src/components/basic/text-input.module.scss
@@ -1,6 +1,6 @@
 .type-item {
 	@include flex-center;
-	width: $button-size * 2 !important;
+	width: $button-size * 2px !important;
 	> svg {
 		opacity: 0.8;
 	}
@@ -13,10 +13,10 @@
 	border: 0px;
 	outline: 0px;
 	background: none;
-	width: $button-size * 2 !important;
+	width: $button-size * 2px !important;
 	padding: 0px 10px;
 	&:focus {
-		width: $button-size * 3 !important;
+		width: $button-size * 3px !important;
 	}
 }
 .type-input-controller {
@@ -24,7 +24,7 @@
 
 	.type-input-item {
 		@include flex-center;
-		width: $button-size (-$button-margin);
+		width: $button-size (-$button-margin) + px;
 		opacity: 0.8;
 	}
 }
