--- a/packages/buitar/src/pages/guitar-tableture/guitar-tableture.module.scss
+++ b/packages/buitar/src/pages/guitar-tableture/guitar-tableture.module.scss
@@ -1,5 +1,5 @@
 .tableture-tab {
-	width: $button-size * 5;
+	width: $button-size * 5px;
 }
 
 .tableture-list-options {
@@ -8,7 +8,7 @@
 		@include flex-center();
 		font-size: 20px;
 		position: relative;
-		width: $button-size * 2;
+		width: $button-size * 2px;
 		&-tag {
 			font-size: 10px;
 			position: absolute;
@@ -23,7 +23,7 @@
 		@include flex-center();
 		font-size: 12px;
 		position: relative;
-		width: $button-size * 4;
+		width: $button-size * 4px;
 	}
 
 	.tableture-options-button {
@@ -48,21 +48,21 @@
 
 
 .tableture-list-item {
-	margin-bottom: $button-size * 0.2;
-	margin-right: $button-size * 0.2;
+	margin-bottom: $button-size * 0.2px;
+	margin-right: $button-size * 0.2px;
 }
 
 .tableture-list-button {
 	@include flex-center();
 	font-size: 20px;
-	width: $button-size * 1.5 !important;
-	height: $button-size * 1.5 !important;
+	width: $button-size * 1.5px !important;
+	height: $button-size * 1.5px !important;
     margin-top: $button-size * 0.1px !important;
 }
 
 .guitar-size-slider {
-	height: $button-size * 0.8 !important;
-	width: $button-size * 6 !important;
+	height: $button-size * 0.8px !important;
+	width: $button-size * 6px !important;
 	padding: 0 12px;
 	font-size: 10px;
 	display: flex;
@@ -74,8 +74,8 @@
 }
 
 .guitar-range-slider {
-	width: $button-size * 6 + 24 !important;
-	margin-bottom: $button-margin * 2;
+	width: $button-size * 6 + 24 + px !important;
+	margin-bottom: $button-margin * 2px;
 	:global(.buitar-primary-range) {
 		width: inherit;
 	}
@@ -84,7 +84,7 @@
 .icon-right {
 	font-size: 14px;
 	position: absolute;
-	right: $button-margin * 2;
+	right: $button-margin * 2px;
 	opacity: 0.4;
 	transition: transform 0.15s ease-in-out;
 	&.icon-right__extend {
