--- a/packages/buitar/src/pages/home/home.module.scss
+++ b/packages/buitar/src/pages/home/home.module.scss
@@ -24,8 +24,8 @@
 		.links-button {
 			font-weight: 300;
 			font-size: 18px;
-			width: $button-size * 4;
-			height: $button-size * 1.5;
+			width: $button-size * 4px;
+			height: $button-size * 1.5px;
 			text-decoration: none;
 			color: $white-01;
 			@include flex-center;
