feat: 移动端UI适配

--- a/packages/buitar/src/pages/chord-progressions/chord-progressions.module.scss
+++ b/packages/buitar/src/pages/chord-progressions/chord-progressions.module.scss
@@ -1,8 +1,6 @@
 .taps-viewer {
 	display: flex;
-
+	flex-wrap: wrap;
 	.card-view {
-		width: $button-size * 4px !important;
-		height: $button-size * 4px !important;
 	}
 }
