--- a/packages/buitar/src/style/app.scss
+++ b/packages/buitar/src/style/app.scss
@@ -49,6 +49,7 @@ $pcLayout: "only screen and (min-width: 499px)";
 	}
 }
 
+// es module 使用
 :export {
 	button_size: $button-size;
 	button_margin: $button-margin;
